# promptolution

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  direct_test.py  index.html  isolated_optimizer_tests.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  terminal.txt  terminal1.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  cicd.yml  docs.yml
api/callbacks/: index.html
api/config/: index.html
api/exemplar_selectors/: index.html
api/helpers/: index.html
api/llms/: index.html
api/optimizers/: index.html
api/predictors/: index.html
api/tasks/: index.html
api/utils/: index.html
configs/: dummy.ini  experiment.ini  experiment_eval.ini  experiment_eval_task_descr.ini  experiment_gpt.ini  experiment_initial_prompts.ini  experiment_short.ini  experiment_task_descr.ini  experiments.ini  experiments_evaluation.ini  experiments_gpt.ini  experiments_task_descr.ini  gpt2.ini  llama.ini  local_evaluation_de copy.ini  local_evaluation_ga.ini  test.ini
data_sets/: task_descriptions.json  test.json
data_sets/agnews/: description.json  prompts_auto.txt
data_sets/cr/: description.json
data_sets/mr/: description.json  prompts.txt
data_sets/sst-5/: description.json  prompts.txt
data_sets/sst2/: description.json  prompts_auto.txt
data_sets/subj/: description.json  prompts.txt
data_sets/trec/: description.json
docs/: index.md  release-notes.md
docs/api/: callbacks.md  config.md  exemplar_selectors.md  helpers.md  llms.md  optimizers.md  predictors.md  tasks.md  utils.md
docs/examples/: getting_started.md  llm_as_judge_tutorial.md  reward_task_tutorial.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.1b.md  v0.2.0.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.4.0.md  v2.0.0.md  v2.0.1.md  v2.1.0.md  vX.X.X.md
docs/stylesheets/: extra.css
examples/getting_started/: index.html
examples/llm_as_judge_tutorial/: index.html
examples/reward_task_tutorial/: index.html
logs/: best_scores.csv
logs/evaluation_task_descr/: best_scores.csv
logs/experiment/: best_scores.csv
logs/experiment_eval/: best_scores.csv
logs/experiment_eval_task_descr/: best_scores.csv
logs/experiment_evaluation/: best_scores.csv
logs/experiment_gpt/: best_prompts.csv  best_scores.csv
logs/experiment_initial_prompts/: best_scores.csv
logs/experiment_short/: best_scores.csv
logs/experiment_task_descr/: best_scores.csv
logs/experiments_old/: best_scores.csv
notebooks/: evaluation_exp_desc.ipynb  evaluation_exp_eval.ipynb  evaluation_experiment.ipynb  getting_started.ipynb  interesting_prompts.ipynb  lime_plot.ipynb  llm_as_judge_tutorial.ipynb  mpl_stylesheet.mplstyle  optimization_progress.ipynb  reward_task_tutorial.ipynb  similarity_analysis.ipynb  test_train_score_correlation.ipynb
promptolution/: __init__.py  callbacks.py  config.py  helpers.py  llm.py  logging.py  optimizer.py  predictor.py  prompt_creation.py  tasks.py  templates.py
promptolution/exemplar_selectors/: __init__.py  base_exemplar_selector.py  random_search_selector.py  random_selector.py
promptolution/llms/: __init__.py  api_llm.py  base_llm.py  cb_vllm.py  deepinfra.py  local_llm.py  vllm.py
promptolution/optimizers/: __init__.py  base_optimizer.py  capo.py  evoprompt_de.py  evoprompt_ga.py  opro.py  templates.py
promptolution/predictors/: __init__.py  base_predictor.py  classificator.py  classifier.py
promptolution/tasks/: __init__.py  base_task.py  classification_tasks.py  judge_tasks.py  reward_tasks.py
promptolution/templates/: evoprompt_de_template.txt  evoprompt_de_template_task_desc.txt  evoprompt_ga_template.txt  evoprompt_ga_template_task_desc.txt  opro_template.txt
promptolution/utils/: __init__.py  callbacks.py  config.py  formatting.py  helpers.py  logging.py  prompt_creation.py  test_statistics.py  token_counter.py
release-notes/: index.html
report/: design_decisions.md  exposee.md
scripts/: analysis.ipynb  api_llm_demo.py  api_test.py  capo_demo.py  evaluation.py  evoprompt_demo.py  evoprompt_evaluation.py  evoprompt_ga_test.py  evoprompt_ga_test_gsm8k.py  experiment_evaluation.py  experiment_initial_prompts.py  experiment_runs.py  llm_test_run.py  opro_demo.py  opro_test.py  opro_test_run.py  optimizer_test_run.py  prompt_creation_run.py  prompt_creation_tutorial.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
templates/: evoprompt_de_template.txt  evoprompt_de_template_task_desc.txt  evoprompt_ga_template.txt  evoprompt_ga_template_task_desc.txt  opro_template.txt
tests/: conftest.py  fixtures.py
tutorials/: api_llm_demo.py  capo_demo.py  evoprompt_demo.py  getting_started.ipynb  llm_as_judge_tutorial.ipynb  opro_demo.py  reward_task_tutorial.ipynb
(+226 files in other folders)
