[tool.poetry]
name = "promptolution"
version = "1.3.2"
description = "A framework for prompt optimization and a zoo of prompt optimization algorithms."
authors = ["Tom Zehle, Moritz Schlager, Timo Heiß"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
pandas = "^2.2.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"

[tool.poetry.group.requests.dependencies]
openai = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.vllm.dependencies]
vllm = "^0.7.3"

[tool.poetry.group.transformers.dependencies]
transformers = "^4.48.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocstrings = {version = "^0.26.1", extras = ["python"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pydocstyle]
convention = "google"