[tool.poetry]
name = "promptolution"
version = "2.0.0"
description = "A framework for prompt optimization and a zoo of prompt optimization algorithms."
authors = ["Tom Zehle, Moritz Schlager, Timo Heiß"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
pandas = "^2.2.2"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
fastparquet = "^2024.11.0"

[tool.poetry.group.api.dependencies]
openai = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.vllm.dependencies]
vllm = "^0.8.3"

[tool.poetry.group.transformers.dependencies]
transformers = "^4.48.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
openai = "^1.0.0"
requests = "^2.31.0"
vllm = "^0.8.2"
transformers = "^4.48.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocstrings = {version = "^0.26.1", extras = ["python"]}
jupyter = "^1.1.1"
nbconvert = "^7.16.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "TYPING", "FIRSTPARTY", "PROMPTOLUTION", "LOCALFOLDER"]
known_typing = ["typing"]
known_promptolution = ["promptolution"]
lines_between_sections = 1

[tool.pydocstyle]
convention = "google"
